# NerdTracker

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  setup.py  wrangler.toml
NerdTrackerCleanup/: README.md  cleanup_locations.py
app/: Dockerfile  package-lock.json  package.json  secrets.dist.json  vitest.config.mts  wrangler.toml
app/src/: index.ts
app/test/: index.spec.ts  token.spec.ts
db/: init.sql  local.sql  universal.sql
docs/: pmtiles_pipeline_proposal.md
experiments/pmtiles/: README.md
experiments/pmtiles/src/: README.md  cli.py  pyproject.toml
experiments/pmtiles/src/pmtiles_last_week/: cli.py
experiments/pmtiles_last_week/: README.md
experiments/pmtiles_last_week/src/pmtiles_last_week/: __init__.py  cli.py
location-inserter/: Dockerfile  package-lock.json  package.json  secrets.dist.json  vitest.node.config.mts  wrangler.toml
location-inserter/src/: index.ts
location-inserter/test/: db.test.ts  distance.spec.ts  index.spec.ts
location-reporter/: package-lock.json  package.json  secrets.dist.json  tsconfig.json  wrangler.toml
location-reporter/src/: index.ts
scripts/: backup_locations.sh  export_to_geojson.py  process_locations.py  pyproject.toml  supabase2dawarich.py
src/: index.ts
test/: supabase.ts
track-aggregator/: package-lock.json  package.json  secrets.dist.json  vitest.config.mts  wrangler.toml
track-aggregator/src/: index.ts
track-aggregator/test/: archive.spec.ts  scheduled.spec.ts
