[project]
name = "pmtiles-last-week"
version = "0.1.0"
description = "Quick exporter that pulls the last week of locations and builds a PMTiles archive."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1.18",
]

[project.scripts]
pmtiles-last-week = "pmtiles_last_week.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pmtiles_last_week"]

[tool.uv]
dev-dependencies = []
